--- a/ui/qtracker.ui
+++ b/ui/qtracker.ui
@@ -10,8 +10,19 @@
     <height>585</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>40</width>
+    <height>40</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton {
+ margin: 0px;
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QComboBox" name="comboBox">
@@ -79,10 +90,54 @@
    <widget class="QToolButton" name="toolButton">
     <property name="geometry">
      <rect>
+      <x>410</x>
+      <y>250</y>
+      <width>32</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/icons/add.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="qtracker.qrc">
+      <normaloff>:/icons/add.png</normaloff>:/icons/add.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
+    <property name="toolButtonStyle">
+     <enum>Qt::ToolButtonIconOnly</enum>
+    </property>
+    <property name="autoRaise">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QToolButton" name="toolButton_2">
+    <property name="geometry">
+     <rect>
       <x>171</x>
-      <y>81</y>
-      <width>42</width>
-      <height>41</height>
+      <y>129</y>
+      <width>21</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -95,7 +150,7 @@
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="qtime.qrc">
+     <iconset resource="qtracker.qrc">
       <normaloff>:/icons/add.png</normaloff>:/icons/add.png</iconset>
     </property>
     <property name="iconSize">
@@ -108,26 +163,51 @@
      <enum>Qt::ToolButtonIconOnly</enum>
     </property>
    </widget>
-   <widget class="QToolButton" name="toolButton_2">
+   <widget class="QToolButton" name="toolButton_3">
     <property name="geometry">
      <rect>
-      <x>171</x>
-      <y>129</y>
-      <width>42</width>
-      <height>41</height>
+      <x>470</x>
+      <y>90</y>
+      <width>30</width>
+      <height>24</height>
      </rect>
     </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>230</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+margin: 0px 0px;
+     }
+
+     QPushButton:pressed {
+         background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                           stop: 0 #dadbde, stop: 1 #f6f7fa);
+     }
+
+     QPushButton:flat {
+         border: none; /* no border for a flat push button */
+     }
+
+     QPushButton:default {
+         border-color: navy; /* make the default button prominent */
+     }</string>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="icon">
-     <iconset resource="qtime.qrc">
+     <iconset resource="qtracker.qrc">
       <normaloff>:/icons/add.png</normaloff>:/icons/add.png</iconset>
     </property>
     <property name="iconSize">
@@ -136,8 +216,18 @@
       <height>32</height>
      </size>
     </property>
-    <property name="toolButtonStyle">
-     <enum>Qt::ToolButtonIconOnly</enum>
+   </widget>
+   <widget class="QToolButton" name="toolButton_4">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>140</y>
+      <width>30</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
     </property>
    </widget>
   </widget>
@@ -213,7 +303,7 @@
   </action>
  </widget>
  <resources>
-  <include location="qtime.qrc"/>
+  <include location="qtracker.qrc"/>
  </resources>
  <connections>
   <connection>
