--- a/ui/task.ui
+++ b/ui/task.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>374</width>
-    <height>99</height>
+    <width>413</width>
+    <height>131</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Create Project</string>
+   <string>Add Task</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -19,12 +19,28 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Project Name</string>
+        <string>P&amp;roject</string>
+       </property>
+       <property name="buddy">
+        <cstring>project_combo</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="newproject_line"/>
+      <widget class="QComboBox" name="project_combo"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Task</string>
+       </property>
+       <property name="buddy">
+        <cstring>project_combo</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="newtask_line"/>
      </item>
     </layout>
    </item>
@@ -48,22 +64,5 @@
   </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>button_box</sender>
-   <signal>rejected()</signal>
-   <receiver>widget</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>188</x>
-     <y>113</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>188</x>
-     <y>67</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
