--- a/ui/qtracker.ui
+++ b/ui/qtracker.ui
@@ -19,17 +19,12 @@
   <property name="windowTitle">
    <string>QTracker v 0.1</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true">QPushButton {
- margin: 0px;
-}</string>
-  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -176,6 +171,9 @@
            <property name="text">
             <string>Time Spent</string>
            </property>
+           <property name="textAlignment">
+            <set>AlignHCenter|AlignVCenter|AlignCenter</set>
+           </property>
           </column>
           <column>
            <property name="text">
@@ -183,6 +181,30 @@
            </property>
           </column>
          </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QPushButton" name="rebuild">
+            <property name="text">
+             <string>Rebuild</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
